# rawuefi

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  status.rs  types.rs
src/protocols/: mod.rs
src/protocols/console/: mod.rs  simple_text_input.rs  simple_text_input_ex.rs  simple_text_output.rs
src/tables/: mod.rs  runtime_services.rs  system.rs
